--- a/nglview/tests/notebooks/rho_protein.ipynb
+++ b/nglview/tests/notebooks/rho_protein.ipynb
@@ -19,15 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._clear_repr()\n",
-    "view.add_cartoon()\n",
-    "view.add_licorice('not water and not hydrogen')"
+    "view._clear_repr(model=0)"
    ]
   },
   {
@@ -38,7 +36,8 @@
    },
    "outputs": [],
    "source": [
-    "view.center_view()"
+    "view.add_cartoon()\n",
+    "view.add_licorice('not water and not hydrogen')"
    ]
   },
   {
@@ -49,12 +48,23 @@
    },
    "outputs": [],
    "source": [
-    "view.parameters = {'theme': 'dark'}"
+    "view.center_view()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.parameters = {'theme': 'dark'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -68,57 +78,13 @@
        "           "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "traj"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "b = open('../data/rho-inactive_md-hydration.cube').read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view._add_reference(b, ext='cube')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.add_surface(index=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.export_image(factor=3)"
    ]
   }
  ],
@@ -138,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   },
   "widgets": {
    "state": {},
