--- a/examples/notebooks/multiple_ligand_view.ipynb
+++ b/examples/notebooks/multiple_ligand_view.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f5e3dc3cacc4876b00d08657b55e16f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import nglview as nv\n",
     "import parmed as pmd\n",
@@ -13,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +35,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  9810  100  9810    0     0  68409      0 --:--:-- --:--:-- --:--:-- 68601\n",
+      "100  9810  100  9810    0     0  38981      0 --:--:-- --:--:-- --:--:-- 39083\n",
       "curl: (6) Could not resolve host: 5ht3ligs.sdf\n"
      ]
     },
@@ -35,7 +48,7 @@
        " <Structure 26 atoms; 1 residues; 29 bonds; NOT parameterized>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74b824240097468d9ee5abd7add17658",
+       "model_id": "a46aed66f3a3465dbcccd21b90a9c872",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +75,7 @@
        "VBox(children=(NGLWidget(), IntSlider(value=0, max=3)))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +88,7 @@
     "def show_one_ligand(change):\n",
     "    val = change['new']\n",
     "    view.show_only([val])\n",
-    "    \n",
+    "\n",
     "slider.observe(show_one_ligand, 'value')\n",
     "\n",
     "VBox([view, slider])"
@@ -83,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -109,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
